add organizers section

--- a/app/index.html
+++ b/app/index.html
@@ -62,6 +62,51 @@
     </section>
   </div>
 
+  <!-- ==== TEAM MEMBERS ==== -->
+  <div class="container" id="team" name="team">
+  <br>
+    <div class="row white centered">
+      <h1 class="centered">Organizadores y Mentores</h1>
+      <hr>
+      <br>
+      <br>
+      <div class="col-lg-3 centered">
+        <img class="img img-circle" src="https://avatars3.githubusercontent.com/u/391270?v=3&s=460" height="120px" width="120px" alt="">
+        <br>
+        <h4><b>Gabo Esquivel</b></h4>
+        <a target="_blank" href="http://twitter.com/gaboesquivel" class="icon icon-twitter"></a>
+        <a target="_blank" href="http://github.com/gaboesquivel" class="icon icon-github"></a>
+        <a target="_blank" href="http://gaboesquivel.com" class="icon icon-pencil"></a>
+      </div><!-- col-lg-3 -->
+
+      <div class="col-lg-3 centered">
+        <img class="img img-circle" src="https://avatars2.githubusercontent.com/u/54058?v=3&s=460" height="120px" width="120px" alt="">
+        <br>
+        <h4><b>Jasson Cascante</b></h4>
+        <a target="_blank" href="http://twitter.com/yeco" class="icon icon-twitter"></a>
+        <a target="_blank" href="http://github.com/yeco" class="icon icon-github"></a>
+      </div><!-- col-lg-3 -->
+
+      <div class="col-lg-3 centered">
+        <img class="img img-circle" src="https://avatars2.githubusercontent.com/u/1458238?v=3&s=460" height="120px" width="120px" alt="">
+        <br>
+        <h4><b>Kevin Blanco</b></h4>
+        <a target="_blank" href="http://twitter.com/kevinblancoz" class="icon icon-twitter"></a>
+        <a target="_blank" href="http://github.com/kevinblanco" class="icon icon-github"></a>
+      </div><!-- col-lg-3 -->
+
+      <div class="col-lg-3 centered">
+        <img class="img img-circle" src="https://avatars3.githubusercontent.com/u/951133?v=3&s=460" height="120px" width="120px" alt="">
+        <br>
+        <h4><b>Alberto Cole</b></h4>
+        <a target="_blank" href="http://twitter.com/hybrisCole" class="icon icon-twitter"></a>
+        <a target="_blank" href="http://github.com/hybrisCole" class="icon icon-github"></a>
+      </div><!-- col-lg-3 -->
+
+    </div><!-- row -->
+  </div><!-- container -->
+
+
   <section class="questions">
     <div class="container">
       <div class="row">
@@ -78,6 +123,7 @@
     </div>
 
   </section>
+
   </div>
 
   <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
