agrega mas info

--- a/app/index.html
+++ b/app/index.html
@@ -36,6 +36,7 @@
 
 
   <div class="container">
+
     <section class="what-we-do">
       <div class="col-md-4">
         <h3 class="content-subhead">Aprende a programar</h3>
@@ -62,8 +63,37 @@
     </section>
   </div>
 
+  <!-- ==== QUE ES NODESCHOOL ==== -->
+  <div class="container" id="nodeschool">
+    <br>
+    <br>
+    <div class="row white centered">
+      <h1 class="centered">Qué es NodeSchool? De qué se trata?</h1>
+      <hr>
+      <br>
+      <br>
+          <p>NodeSchool es una iniciativa de comunidad que busca enseñar JavaScript y Node.js a través de talleres presenciales utilizando módulos interactivos que te ayudan a aprender o mejorar, escribiendo código y resolviendo problemas con la ayuda de mentores. En cada módulo hay retos que puedes pasar a tu propio ritmo. Sin charlas aburridas. Todos los retos son software libre y están disponibles en nodeschool.io por lo que puedes seguir aprendiendo después del evento o bien puedes empezar desde la casa.</p>
+    </div>
+  </div>
+
+
+
+  <!-- ==== TALLERES ==== -->
+  <div class="container" id="talleres">
+   <br>
+    <div class="row white centered">
+      <h1 class="centered">Talleres</h1>
+      <hr>
+      <br>
+      <br>
+
+    <p>Nuevos talleres serán anunciados próximamente, subscríbete en <a href="https://github.com/nodeschool/costarica">github</a> o <a href="http://meetup.com/costaricajs">meetup</a> para recibir notificaciones.</p>
+    </div>
+  </div>
+
+
   <!-- ==== TEAM MEMBERS ==== -->
-  <div class="container" id="team" name="team">
+  <div class="container" id="team">
   <br>
     <div class="row white centered">
       <h1 class="centered">Organizadores y Mentores</h1>
