--- a/app/index.html
+++ b/app/index.html
@@ -155,7 +155,7 @@
       <img class="img img-circle" src="https://twitter.com/{{twitter}}/profile_image?size=original" height="120px" width="120px" alt="">
       <br>
       <h4><b>{{name}}</b></h4>
-      {{#if website}}<a target="_blank" href="http://gaboesquivel.com" class="icon icon-pencil"></a>{{/if}}
+      {{#if website}}<a target="_blank" href="{{website}}" class="icon icon-pencil"></a>{{/if}}
       {{#if twitter}}<a target="_blank" href="http://twitter.com/{{twitter}}" class="icon icon-twitter"></a>{{/if}}
       {{#if github}}<a target="_blank" href="http://github.com/{{github}}" class="icon icon-github"></a>{{/if}}
       <br><br>
