fix sponsor logo img urls

--- a/app/index.html
+++ b/app/index.html
@@ -147,11 +147,11 @@
       <div class="row white centered">
 
         <div class="col-lg-3 col-sm-2 centered">
-          <img class="img" src="/images/sponsors/edify.png" height="150px" width="150px" alt="">
+          <img class="img" src="images/sponsors/edify.png" height="150px" width="150px" alt="">
         </div>
 
         <div class="col-lg-3 col-sm-2 centered">
-          <img class="img" src="/images/sponsors/la404.png" height="150px" width="150px" alt="">
+          <img class="img" src="images/sponsors/la404.png" height="150px" width="150px" alt="">
         </div>
 
       </div>
