--- a/app/index.html
+++ b/app/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>nodeschool costarica</title>
-  <meta name="description" content="aprende JavaScript y Node.js">
+  <title>Nodeschool Costa Rica - JavaScript y Node.js</title>
+  <meta name="description" content="Aprende JavaScript y NodeJS a través de talleres interactivos a su propio ritmo!. San José, Costa Rica">
 
   <!-- Place favicon.ico in the root directory -->
 
