update sponsors section

--- a/app/index.html
+++ b/app/index.html
@@ -173,13 +173,18 @@
       <br>
       <p>No podríamos tener eventos Nodeschool aquí en Costa Rica sin la ayuda de estupendos patrocinadores:</p>
       <div class="row white centered">
-
-        <div class="col-lg-3 col-sm-2 centered">
-          <img class="img" src="images/sponsors/edify.png" height="150px" width="150px" alt="">
+        <h2>Patrocinadores Oro</h2>
+        <br>
+        <div class="col-lg-4 col-sm-2 col-md-offset-4 centered">
+          <img class="img" src="images/sponsors/edify.png" height="200px" width="200px" alt="">
         </div>
+      </div>
 
-        <div class="col-lg-3 col-sm-2 centered">
-          <img class="img" src="images/sponsors/la404.png" height="150px" width="150px" alt="">
+      <div class="row white centered">
+        <br>
+        <h2>Patrocinadores Plata</h2>
+        <div class="col-lg-4 col-sm-2 col-md-offset-4 centered">
+          <img class="img" src="images/sponsors/la404.png" height="130px" width="150px" alt="">
         </div>
 
       </div>
