--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Nodeschool Costa Rica - JavaScript y Node.js</title>
-  <meta name="description" content="Aprende JavaScript y NodeJS a través de talleres interactivos a su propio ritmo!. San José, Costa Rica">
+  <meta name="description" content="Aprende JavaScript y NodeJS a través de talleres interactivos a tu propio ritmo!. San José, Costa Rica">
 
   <!-- Place favicon.ico in the root directory -->
 
