add countdown to landing page connects #4 merge and close #9

--- a/app/index.html
+++ b/app/index.html
@@ -30,6 +30,7 @@
       <div class="who-are-we">
         <h1><a href="/">nodeschool costa rica</a></h1>
         <p class="lead">- aprende javascript y node.js -</p>
+        <div class="countdown"></div>
       </div>
     </div>
   </header>
@@ -233,6 +234,7 @@
   <script src="/bower_components/handlebars/handlebars.js"></script>
   <!-- bower:js -->
   <script src="/bower_components/jquery/dist/jquery.js"></script>
+  <script src="/bower_components/jquery.countdown/dist/jquery.countdown.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
 
@@ -250,6 +252,18 @@
       {{#if github}}<a target="_blank" href="http://github.com/{{github}}" class="icon icon-github"></a>{{/if}}
       <br><br>
     </div><!-- col-lg-3 -->
+  </script>
+
+  <script type="text/javascript">
+     $('.countdown').countdown('2016/05/21', function(event) {
+       var $this = $(this).html(event.strftime(''
+         + 'Faltan '
+         + '<span>%w</span> semanas '
+         + '<span>%d</span> días '
+         + '<span>%H</span> horas '
+         + '<span>%M</span> minutos '
+         + '<span>%S</span> segundos'));
+     });
   </script>
 
   <!-- build:js scripts/main.js -->
