--- a/app/index.html
+++ b/app/index.html
@@ -27,9 +27,7 @@
     
     -->
     <header>
-      <div class="header-top clearfix">
-        <h1 class="l-left"><a href="#firstSection">Your Logo</a></h1><a href="#" class="l-right toggle-menu"><i></i><i></i><i></i></a>
-      </div>
+      <div class="header-top clearfix"><a href="#" class="l-right toggle-menu"><i></i><i></i><i></i></a></div>
       <nav>
         <ul id="menu">
           <li data-menuanchor="firstSection"><a href="#firstSection" title="First Section">First Section</a></li>
@@ -43,15 +41,67 @@
     </header>
     <div id="fullpage">
       <section class="vertical-scrolling">
-        <h2>fullPage.js</h2>
-        <h3>This is the first section</h3>
-        <div class="scroll-icon">
-          <p>Jump into the last slide</p><a href="#fifthSection/1" class="icon-up-open-big"></a>
+        <header class="site-header">
+          <div class="container text-center">
+            <div class="row">
+              <div class="col-md-12 visible-inline-block">
+                <h1><a href="/">nodeschool costa rica</a></h1>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-12 visible-inline-block"><br>
+                <p class="lead">- aprende javascript y node.js -</p>
+                <div class="countdown"></div>
+              </div>
+            </div>
+          </div>
+        </header>
+        <div class="container visible-lg-block visible-md-block">
+          <div class="what-we-do row text-justify">
+            <div class="col-md-4">
+              <h3 class="content-subhead">Aprende a programar</h3>
+              <p>Únete a nosotros y aprende a programar. Nos centraremos en Node.js básico. Si ya sabes algo de JavaScript genial!; en caso contrario te ayudaremos. Hay tallers para todos los niveles</p>
+            </div>
+            <div class="col-md-4">
+              <h3 class="content-subhead">A tu ritmo</h3>
+              <p>Puedes pasar los retos a tu propio ritmo. Sin charlas aburridas. Todos los retos son software libre y están disponibles en  <a href="http://nodeschool.io/">nodeschool.io</a>. Podrás seguir aprendiendo después del evento.</p>
+            </div>
+            <div class="col-md-4">
+              <h3 class="content-subhead">Para todos</h3>
+              <p>Creemos que programar en JavaScript es una habilidad invaluable y en alta demanda, y queremos ponerlo al alcance de todo el mundo.</p>
+            </div>
+          </div>
         </div>
       </section>
-      <section class="vertical-scrolling">
-        <h2>fullPage.js</h2>
-        <h3>This is the second section</h3>
+      <section class="vertical-scrolling hidden-md hidden-lg">
+        <div class="container">
+          <div class="what-we-do row text-justify">
+            <div class="col-md-4">
+              <h3 class="content-subhead">Aprende a programar</h3>
+              <p>Únete a nosotros y aprende a programar. Nos centraremos en Node.js básico. Si ya sabes algo de JavaScript genial!; en caso contrario te ayudaremos. Hay tallers para todos los niveles</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="vertical-scrolling hidden-md hidden-lg">
+        <div class="container">
+          <div class="what-we-do row text-justify">
+            <div class="col-md-4">
+              <h3 class="content-subhead">A tu ritmo</h3>
+              <p>Puedes pasar los retos a tu propio ritmo. Sin charlas aburridas. Todos los retos son software libre y están disponibles en  <a href="http://nodeschool.io/">nodeschool.io</a>. Podrás seguir aprendiendo después del evento.</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="vertical-scrolling hidden-md hidden-lg">
+        <div class="container">
+          <div class="what-we-do row text-justify">
+            <div class="col-md-4">
+              <h3 class="content-subhead">Para todos</h3>
+              <p>Creemos que programar en JavaScript es una habilidad invaluable y en alta demanda, y queremos ponerlo al alcance de todo el mundo.</p>
+            </div>
+          </div>
+        </div>
       </section>
       <section class="vertical-scrolling">
         <h2>fullPage.js</h2>
