Added size parameter to github image.

--- a/app/index.html
+++ b/app/index.html
@@ -247,7 +247,7 @@
       {{#if twitter}}
       <img class="img img-circle" src="https://twitter.com/{{twitter}}/profile_image?size=original" height="120px" width="120px" alt="">
       {{else}}
-      <img class="img img-circle" src="https://avatars.githubusercontent.com/{{github}}" height="120px" width="120px" alt="">
+      <img class="img img-circle" src="https://avatars.githubusercontent.com/{{github}}?s=120" height="120px" width="120px" alt="">
       {{/if}}
       <br>
       <h4><b>{{name}}</b></h4>
