fix(layout): fix horizontal scrolling

--- a/app/index.html
+++ b/app/index.html
@@ -94,7 +94,7 @@
       </section>
     </div>
     <!-- ==== TALLERES ====-->
-    <div id="imagen-costa-rica" class="row"></div>
+    <div id="imagen-costa-rica" class="row-fluid"></div>
     <!-- ==== TALLERES ====-->
     <div id="talleres" class="container">
       <section>
