--- a/app/index.html
+++ b/app/index.html
@@ -181,7 +181,7 @@
     <!-- build:js scripts/plugins.js-->
     <!-- endbuild-->
     <script id="mentor-template" type="text/x-handlebars-template">
-      <div class="col-lg-3 col-sm-2 centered">
+      <div class="col-md-3 col-sm-6 centered">
       {{#if twitter}}
       <img class="img img-circle" src="https://twitter.com/{{twitter}}/profile_image?size=original" height="120px" width="120px" alt="">
       {{else}}
@@ -189,9 +189,11 @@
       {{/if}}
       <br>
       <h4><b>{{name}}</b></h4>
-      {{#if website}}<a target="_blank" href="{{website}}" class="icon icon-pencil"></a>{{/if}}
-      {{#if twitter}}<a target="_blank" href="http://twitter.com/{{twitter}}" class="icon icon-twitter"></a>{{/if}}
-      {{#if github}}<a target="_blank" href="http://github.com/{{github}}" class="icon icon-github"></a>{{/if}}
+      <p class="mentor-links">
+        {{#if website}}<a target="_blank" href="{{website}}" class="icon icon-pencil"></a>{{/if}}
+        {{#if twitter}}<a target="_blank" href="http://twitter.com/{{twitter}}" class="icon icon-twitter"></a>{{/if}}
+        {{#if github}}<a target="_blank" href="http://github.com/{{github}}" class="icon icon-github"></a>{{/if}}
+      </p>
       <br><br>
       </div><!-- col-lg-3 -->
     </script>
