display mentors bio

--- a/app/index.html
+++ b/app/index.html
@@ -189,6 +189,7 @@
       {{/if}}
       <br>
       <h4><b>{{name}}</b></h4>
+      <p style="font-size:11px;">{{bio}}</p>
       <p class="mentor-links">
         {{#if website}}<a target="_blank" href="{{website}}" class="icon icon-pencil"></a>{{/if}}
         {{#if twitter}}<a target="_blank" href="http://twitter.com/{{twitter}}" class="icon icon-twitter"></a>{{/if}}
