--- a/app/en.html
+++ b/app/en.html
@@ -190,6 +190,7 @@ Questions? You want to help or participate ?</h3>
       {{/if}}
       <br>
       <h4><b>{{name}}</b></h4>
+      <p style="font-size:11px;">{{bio}}</p>
       <p class="mentor-links">
       {{#if website}}<a target="_blank" href="{{website}}" class="icon icon-pencil"></a>{{/if}}
       {{#if twitter}}<a target="_blank" href="http://twitter.com/{{twitter}}" class="icon icon-twitter"></a>{{/if}}
