--- a/app/index.html
+++ b/app/index.html
@@ -188,12 +188,20 @@
         <p>No podríamos tener eventos Nodeschool aquí en Costa Rica sin la ayuda de estupendos patrocinadores:</p>
 
         <div class="row">
+          <div class="col-md-12 centered">
+            <h2>Patrocinador Platinum</h2>
+
+            <img src="images/sponsors/gorilla-logic.png" class="img img-sponsors">
+
+          </div>
+        </div>
+
+
+        <div class="row">
           <div class="col-md-12">
 
               <div class="col-md-6 centered">
                 <h2>Patrocinadores Oro</h2>
-
-                <img src="images/sponsors/gorilla-logic.png" class="img img-sponsors">
 
                 <img src="images/sponsors/edify.png" class="img img-sponsors">
 
@@ -213,6 +221,8 @@
                 <img src="images/sponsors/la404.png" class="img img-sponsors">
 
                 <img src="images/sponsors/18techs.png" class="img img-sponsors">
+
+                <img src="images/sponsors/salsamobi.png" class="img img-sponsors">
 
                 <img src="images/sponsors/brainstation.png" class="img img-sponsors">
 
