add slack channel

--- a/app/index.html
+++ b/app/index.html
@@ -244,7 +244,9 @@
           <div class="col-md-12">
             <br>
             <h3>Preguntas? Quieres ayudar o participar?</h3>
-            <p>Simplemente abre un issue en <a href="https://github.com/nodeschool/costaricajs">GitHub</a> y únete a la conversación. Sin aún no estás en Github, puedes crear una cuenta <a href="https://github.com/join">gratuitamente</a>. El taller <a href="http://nodeschool.io/#git-it">Git-it</a> te ayudará a iniciar.</p>
+            <p>Simplemente abre un issue en <a href="https://github.com/nodeschool/costaricajs">GitHub</a> y únete a la conversación. Si aún no estás en Github, puedes crear una cuenta <a href="https://github.com/join">gratuitamente</a>. El taller <a href="http://nodeschool.io/#git-it">Git-it</a> te ayudará a iniciar. También puedes hacerlo a través del chat room #nodeshcool en slack.</p>
+            <div class="centered"><script async defer src="http://slack.costaricajs.co/slackin.js?large"></script> </div>
+
 
           </div>
         </div>
