remove text-justify

--- a/app/index.html
+++ b/app/index.html
@@ -88,7 +88,7 @@
             </div>
 
             <div class="col-md-6">
-              <div class="text-justify">
+              <div>
                 <p>Cada año se celebra el día internacional de Nodeschool en el cual las ciudades con capítulos de nodeschool organizamos talleres prácticos para aprender Node y JavaScript, y compartimos a travéz de redes sociales, video streaming y chat. El evento se realiza simultáneamente en diferentes lugares alrededor del mundo, incluyendo: San Francisco, Londres, New York, Moscú, Tel Aviv, París, Lisboa, San Diego, Los Angeles, Austin, San José y entre otras.</p>
 
                 <p>El año pasado (2015) el capítulo de Madrid grabó un video muy bonito acerca de que se trata y como se vive el nodeschool day.</p>
