--- a/app/index.html
+++ b/app/index.html
@@ -204,10 +204,10 @@
 
         <div class="row">
           <div class="col-md-12 centered">
-            <h2>Patrocinador Platinum</h2>
+            <h2>Patrocinadores Platinum</h2>
 
             <img src="images/sponsors/edify.png" class="img img-sponsors">
-            
+
             <img src="images/sponsors/gorilla-logic.png" class="img img-sponsors">
 
           </div>
