fix(layout): edited out a couple of minor typos

--- a/app/en.html
+++ b/app/en.html
@@ -71,7 +71,7 @@
           <hr><br>
           <div class="text-justify">
             <p>Each year we celebrate the international day of Nodeschool in which cities with nodeschool chapters organize workshops to learn Node.js and JavaScript and also networking, sharing the expirience through social media, streaming video and chat. The event is held simultaneously in different locations around the world including San Francisco , London , New York , Moscow, Tel Aviv , Paris , Lisbon, San Diego , Los Angeles , Austin and San Jose among others.</p>
-            <p>The next #nodeschool-day will be held on &nbsp<strong>Saturday, May 21, 2016</strong>. More details in the following days.</p>
+            <p>The next #nodeschool-day will be held on &nbsp;<strong>Saturday, May 21, 2016</strong>. More details in the following days.</p>
             <p>Check out last year's (2015) Heidelberg / Mannheim video about how do you live a #nodeshool-day.</p>
             <p class="embed-responsive embed-responsive-16by9">
               <iframe src="https://www.youtube.com/embed/N6ILqSOzMy8" frameborder="0" allowfullscreen="" class="embed-responsive-item"></iframe>
