--- a/app/index.html
+++ b/app/index.html
@@ -123,12 +123,12 @@
                 <li>04:00pm - Cierre</li>
               </ul>
               <br>
-              <p style="padding-left: 40px">* la agenta esta sugeta cambios <br>
-              * es requisito traer tu propia computadora portátil<br>
-            * abrán camisetas, stickers y alimentación cortesía de los patrocinadores</p>
+              <p style="padding-left: 40px">* La agenda esta sujeta a cambios. <br>
+              * Es requisito traer tu propia computadora portátil.<br>
+            * Habrán camisetas, stickers y alimentación, cortesía de los patrocinadores.</p>
 
               <p style="clear:both; padding-top:40px;" class="centered">
-                <a href="http://www.meetup.com/costaricajs/events/231053645/" target="_blank" class="btn btn-success" style="background-color:#86cdb7; border-color:#86cdb7; color:black;">Reserva tu lugar en meetup.com</a>
+                <a href="http://www.meetup.com/costaricajs/events/231053645/" target="_blank" class="btn btn-success btn-cta" style="background-color:#86cdb7; border-color:#86cdb7; color:black;">Reserva tu lugar en meetup.com</a>
               </p>
           </div>
         </section>
