some style mobile improvements

--- a/app/index.html
+++ b/app/index.html
@@ -109,8 +109,7 @@
         <section class="row white que-esperar">
           <div class="col-md-12">
             <h2>Agenda de Nodeschool International Day 2016 - #nodeschool-day</h2>
-              <br><br>
-              <ul style="list-style:none;">
+              <ul>
                 <li>09:30am - Recepción (Coffee) </li>
                 <li>10:00am - Apertura y discurso inicial</li>
                 <li>10:15am - JavaScript para Todo y para Todos, charla por Gabo Esquivel</li>
@@ -123,7 +122,7 @@
                 <li>04:00pm - Cierre</li>
               </ul>
               <br>
-              <p style="padding-left: 40px">* la agenta esta sugeta cambios <br>
+              <p class="important-notes">* la agenta esta sugeta cambios <br>
               * es requisito traer tu propia computadora portátil<br>
             * abrán camisetas, stickers y alimentación cortesía de los patrocinadores</p>
 
@@ -185,69 +184,37 @@
     <div id="sponsors" class="container"><br>
       <div class="row white centered">
         <h2 class="centered">Organizan</h2>
-        <hr><br>
-
-        <div class="row">
-          <div class="col-md-12 centered">
-
-            <img src="images/costaricajs.png" height="90px" class="img img-organizadores">
-
-            <img src="images/sponsors/edify.png" height="90px" class="img img-organizadores">
-
-            <img src="images/sponsors/la404.png" height="100px" class="img img-organizadores">
-
+        <hr>
+        <div class="col-md-12 centered">
+          <img src="images/costaricajs.png" height="90px" class="img img-organizadores">
+          <img src="images/sponsors/edify.png" height="90px" class="img img-organizadores">
+          <img src="images/sponsors/la404.png" height="100px" class="img img-organizadores">
+        </div>
+        <hr>
+        <div class="col-md-12 centered">
+          <p>No podríamos tener eventos Nodeschool aquí en Costa Rica sin la ayuda de estupendos patrocinadores:</p>
+        </div>
+        <div class="col-md-12 centered">
+          <h2>Patrocinador Platinum</h2>
+          <img src="images/sponsors/edify.png" class="img img-sponsors">
+          <img src="images/sponsors/gorilla-logic.png" class="img img-sponsors">
+        </div>
+        <div class="col-md-12">
+          <div class="col-md-6 centered">
+            <h2>Patrocinadores Oro</h2>
+            <img src="images/sponsors/gap.png" class="img img-sponsors">
+            <img src="images/sponsors/avantica.png" class="img img-sponsors">
+          </div>
+          <div class="col-md-6 centered">
+            <h2>Patrocinadores Plata</h2>
+            <img src="images/sponsors/outer-space-coders.png" class="img img-sponsors">
+            <img src="images/sponsors/la404.png" class="img img-sponsors">
+            <img src="images/sponsors/18techs.png" class="img img-sponsors">
+            <img src="images/sponsors/salsamobi.png" class="img img-sponsors">
+            <img src="images/sponsors/brainstation.png" class="img img-sponsors">
           </div>
         </div>
-
-        <hr><br>
-        <p>No podríamos tener eventos Nodeschool aquí en Costa Rica sin la ayuda de estupendos patrocinadores:</p>
-
-        <div class="row">
-          <div class="col-md-12 centered">
-            <h2>Patrocinador Platinum</h2>
-
-            <img src="images/sponsors/edify.png" class="img img-sponsors">
-            
-            <img src="images/sponsors/gorilla-logic.png" class="img img-sponsors">
-
-          </div>
-        </div>
-
-
-        <div class="row">
-          <div class="col-md-12">
-
-              <div class="col-md-6 centered">
-                <h2>Patrocinadores Oro</h2>
-
-
-
-                <img src="images/sponsors/gap.png" class="img img-sponsors">
-
-                <img src="images/sponsors/avantica.png" class="img img-sponsors">
-
-              </div>
-
-              <div class="col-md-6 centered">
-                <h2>Patrocinadores Plata</h2>
-
-                <img src="images/sponsors/outer-space-coders.png" class="img img-sponsors">
-
-                <img src="images/sponsors/la404.png" class="img img-sponsors">
-
-                <img src="images/sponsors/18techs.png" class="img img-sponsors">
-
-                <img src="images/sponsors/salsamobi.png" class="img img-sponsors">
-
-                <img src="images/sponsors/brainstation.png" class="img img-sponsors">
-
-              </div>
-
-          </div>
-        </div>
-
-        <br><br>
-        <p style="clear:both; padding-top:40px;" class="centered">
+        <p class="centered cta-meetup-container">
           <a href="http://www.meetup.com/costaricajs/events/231053645/" target="_blank" class="btn btn-success" style="background-color:#f1eb24; border-color:#f1eb24; color:black;">Reserva tu lugar en meetup.com</a>
         </p>
       </div>
