--- a/app/index.html
+++ b/app/index.html
@@ -122,7 +122,7 @@
                 <li>04:00pm - Cierre</li>
               </ul>
               <br>
-              <p style="padding-left: 40px">* La agenda esta sujeta a cambios. <br>
+              <p class="important-notes">* La agenda esta sujeta a cambios. <br>
               * Es requisito traer tu propia computadora portátil.<br>
             * Habrán camisetas, stickers y alimentación, cortesía de los patrocinadores.</p>
 
@@ -233,6 +233,7 @@
       </div>
       <!-- row-->
       <br><br>
+      </div>
     </div>
 
     <div class="bg-yellow">
@@ -244,10 +245,8 @@
             <p>Simplemente abre un issue en <a href="https://github.com/nodeschool/costaricajs">GitHub</a> y únete a la conversación. Si aún no estás en Github, puedes crear una cuenta <a href="https://github.com/join">gratuitamente</a>. El taller <a href="http://nodeschool.io/#git-it">Git-it</a> te ayudará a iniciar. También puedes hacerlo a través del chat room #nodeshcool en slack.</p>
             <div class="centered"><script async defer src="http://slack.costaricajs.co/slackin.js?large"></script> </div>
           </div>
-        </div>
-        <p class="copy" style="font-size:10px; text-align:right; margin:0; padding-right:40px; padding-bottom:10px;">sitio web desarrollado por <a target="_blank" href="http://gaboesquivel.com" alt="Gabo Esquivel: Javascript Developer">Gabo Esquivel</a>. &copy; 2016 CostaRicaJS </p>
+          <p class="copy" style="font-size:10px; text-align:right; margin:0; padding-right:40px; padding-bottom:10px;">sitio web desarrollado por <a target="_blank" href="http://gaboesquivel.com" alt="Gabo Esquivel: Javascript Developer">Gabo Esquivel</a>. &copy; 2016 CostaRicaJS </p>
         </section>
-
       </div>
     </div>
 
