--- a/app/index.html
+++ b/app/index.html
@@ -108,7 +108,7 @@
       <div class="container">
         <section class="row white que-esperar">
           <div class="col-md-12">
-            <h2>Agenda de Nodeschool International Day 2016 - #nodeschool-day</h2>
+            <h2>Agenda de Nodeschool International Day 2016 - #nodeschooldaycr16</h2>
               <br><br>
               <ul style="list-style:none;">
                 <li>09:30am - Recepción (Coffee) </li>
